<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username2"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_label" />

    <TextView
        android:id="@+id/store_label"
        android:layout_width="63dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/store_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toEndOf="@+id/store_label"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/find_maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/text_location" />

    <Button
        android:id="@+id/button"
        android:layout_width="359dp"
        android:layout_height="37dp"
        android:layout_marginTop="132dp"
        android:background="@color/red"
        android:text="Sees Menus"
        android:onClick="launchThirdActivity"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Hello, "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>