<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/username3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Hello, Gaduh"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pizza1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Papparoni Pizza"
        app:layout_constraintStart_toEndOf="@+id/pizza"
        app:layout_constraintTop_toTopOf="@+id/pizza" />

    <TextView
        android:id="@+id/text_pizza"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_pizza"
        app:layout_constraintStart_toEndOf="@+id/pizza"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/spaghetti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/spaghetti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Spaghetti"
        app:layout_constraintStart_toEndOf="@+id/spaghetti"
        app:layout_constraintTop_toTopOf="@+id/spaghetti" />

    <TextView
        android:id="@+id/text_spaghetti"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_spaghetti"
        app:layout_constraintStart_toEndOf="@+id/spaghetti"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="121dp"
        android:layout_height="114dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/burger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaghetti" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Burger"
        app:layout_constraintStart_toEndOf="@+id/burger"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <TextView
        android:id="@+id/text_burger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_burger"
        app:layout_constraintStart_toEndOf="@+id/burger"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/steak"
        android:layout_width="121dp"
        android:layout_height="123dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/steak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burger" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Steak"
        app:layout_constraintStart_toEndOf="@+id/steak"
        app:layout_constraintTop_toTopOf="@+id/steak" />

    <TextView
        android:id="@+id/text_steak"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_steak"
        app:layout_constraintStart_toEndOf="@+id/steak"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>